# zephyr-oot-demo-driver-squid

./: CMakeLists.txt  Justfile  README.md  app.overlay  prj.conf
dts/bindings/: zephyr,squid.yaml
squid_sensor_module/zephyr/: CMakeLists.txt  Kconfig  sensor_squid_driver.c  sensor_squid_driver.h
src/: main.c
